--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+airapps-fixes (0.2) bionic; urgency=medium
+
+  * Add scratch2 fix
+
+ -- Juanma1980 <juanma1980@gmail.com>  Mon, 25 Nov 2019 10:28:09 +0100
+
 airapps-fixes (0.1.1) bionic; urgency=medium
 
   * Fix weeras desktop
