--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+airapps-fixes (0.2.3) bionic; urgency=medium
+
+  * Fixed control file. Added conflicts with zero-lliurex-scratch
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Fri, 24 Apr 2020 15:01:39 +0200
+
 airapps-fixes (0.2.2) bionic; urgency=medium
 
   * Add conflicts to control
