--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+airapps-fixes (0.2.4.1) focal; urgency=medium
+
+  * First focal release
+
+ -- Juanma1980 <juanma1980@gmail.com>  Wed, 20 Jan 2021 12:26:56 +0100
+
 airapps-fixes (0.2.4) bionic; urgency=medium
 
   * Fixed control file. Added conflicts with zero-lliurex-scratch
